--- a/docs/package.json
+++ b/docs/package.json
@@ -28,7 +28,7 @@
 		"ci:build": "npm run download && npm run build",
 		"ci:linkcheck": "start-server-and-test ci:start http://localhost:1313 linkcheck:full",
 		"ci:start": "http-server ./public --port 1313 --silent",
-		"clean": "rimraf --glob public content/docs/apis _api-extractor-temp",
+		"clean": "rimraf --glob public content/docs/api _api-extractor-temp",
 		"download": "npm run download:api && npm run build:api",
 		"download:api": "node ./download-apis.js",
 		"download:api:multi": "node ./download-apis.js true",
