improvement(client)!: enhance Jsonable types
Require first generic parameter for `Jsonable` and `Serializable` types that was previously `any` and resulted in `any`.
Additionally alter types to use new `JsonableType[With]` as result when `any` or `unknown` is specified such that some constraint is actually produced.

devtools-core types were broadly broken as its `Primitive` type was updated to respect primitives supported by Jsonable.

This is a type only product change. Some tests were altered beyond type changes to respect the new constraints.

Most deprecated and experimental uses of [unqualified] `Jsonable` or `Serializable` have been replaced by `any`.
Other uses have been updated to specify a generic parameter, which may be `unknown` and now use `JsonableTypeWith` typing.

Due to recursive `TypeOnly` filter used in type tests, the definition for `JsonableTypeWith` uses interfaces where there is nested typing, which limits recursion. This may cause complications like imprecise typing in the future and need to be switch to pure type alias recursion.
Which means the type test generation will need to be updated to handle such types.

--- a/examples/data-objects/table-view/package.json
+++ b/examples/data-objects/table-view/package.json
@@ -51,6 +51,7 @@
 		"@fluidframework/sequence": "workspace:~",
 		"@fluidframework/view-interfaces": "workspace:~",
 		"@tiny-calc/micro": "0.0.0-alpha.5",
+		"@tiny-calc/nano": "0.0.0-alpha.5",
 		"react": "^17.0.1"
 	},
 	"devDependencies": {
