--- a/packages/tools/devtools/devtools-core/package.json
+++ b/packages/tools/devtools/devtools-core/package.json
@@ -133,6 +133,42 @@
 			},
 			"InterfaceDeclaration_FluidDevtoolsProps": {
 				"backCompat": false
+			},
+			"InterfaceDeclaration_FluidHandleNode": {
+				"forwardCompat": false
+			},
+			"InterfaceDeclaration_FluidObjectNodeBase": {
+				"forwardCompat": false
+			},
+			"InterfaceDeclaration_TreeNodeBase": {
+				"forwardCompat": false
+			},
+			"InterfaceDeclaration_UnknownObjectNode": {
+				"forwardCompat": false
+			},
+			"InterfaceDeclaration_ValueNodeBase": {
+				"forwardCompat": false
+			},
+			"InterfaceDeclaration_VisualNodeBase": {
+				"forwardCompat": false
+			},
+			"InterfaceDeclaration_VisualTreeNode": {
+				"forwardCompat": false
+			},
+			"InterfaceDeclaration_VisualValueNode": {
+				"forwardCompat": false
+			},
+			"TypeAliasDeclaration_Primitive": {
+				"forwardCompat": false
+			},
+			"TypeAliasDeclaration_RootHandleNode": {
+				"forwardCompat": false
+			},
+			"TypeAliasDeclaration_VisualChildNode": {
+				"forwardCompat": false
+			},
+			"TypeAliasDeclaration_VisualNode": {
+				"forwardCompat": false
 			}
 		}
 	}
