--- a/tools/pipelines/templates/build-docker-service.yml
+++ b/tools/pipelines/templates/build-docker-service.yml
@@ -130,7 +130,6 @@ extends:
       displayName: Build Stage
       dependsOn: [] # this stage doesn't depend on preceding stage
       variables:
-        - group: container-registry-info
         - ${{ if eq(parameters.testBuild, true) }}:
           - name: buildContainerName
             value: test/${{ parameters.containerName }}
@@ -434,11 +433,11 @@ extends:
               remoteImage: $(latestContainerTag)
 
         templateContext:
-          # This assumes that we set $(containerRegistryConnection) to an appropriate value when parameters.pushImage
-          # is true.
+          # This assumes that we set ${{ variables.containerRegistryConnection }} to an appropriate value when
+          # parameters.pushImage is true.
           ${{ if eq(parameters.pushImage, true) }}:
             authenticatedContainerRegistries:
-            - serviceConnection: $(containerRegistryConnection)
+            - serviceConnection: ${{ variables.containerRegistryConnection }}
           outputs:
           - ${{ if and(eq(variables.buildBase, true), eq(parameters.pack, true)) }}:
             - output: pipelineArtifact
