--- a/tools/pipelines/templates/1ES/build-npm-package.yml
+++ b/tools/pipelines/templates/1ES/build-npm-package.yml
@@ -369,16 +369,8 @@ extends:
                           failIfCoverageEmpty: true
                         condition: and(succeededOrFailed(), eq(variables['ReportDirExists'], 'true'))
 
-                  - ${{ if and(ne(convertToJson(parameters.taskTest), '[]'), contains(convertToJson(parameters.taskTest), 'tinylicious')) }}:
-                    - task: 1ES.PublishPipelineArtifact@1
-                      displayName: Publish Artifact - Tinylicious Log
-                      condition: and(succeededOrFailed(), eq(variables['startTest'], 'true'))
-                      continueOnError: true # Keep running subsequent tasks even if this one fails (e.g. the tinylicious log wasn't there)
-                      inputs:
-                        targetPath: '${{ parameters.buildDirectory }}/packages/test/test-end-to-end-tests/tinylicious.log'
-                        artifactName: tinyliciousLog_attempt-$(System.JobAttempt)
-                        sbomEnabled: false
-                        publishLocation: pipeline
+                  # At this point we want to publish the tinylicious.log artifact, but as part of 1ES migration
+                  # that is now part of templateContext.outputs below.
 
                   # Process test result, include publishing and logging
                   - template: /tools/pipelines/templates/1ES/include-process-test-results.yml@self
@@ -399,19 +391,8 @@ extends:
                       workingDirectory: '${{ parameters.buildDirectory }}'
                       filePath: $(Build.SourcesDirectory)/scripts/pack-packages.sh
 
-                  - task: 1ES.PublishPipelineArtifact@1
-                    displayName: Publish Artifact - pack
-                    inputs:
-                      targetPath: $(Build.ArtifactStagingDirectory)/pack
-                      artifactName: pack
-                      publishLocation: pipeline
-
-                  - task: 1ES.PublishPipelineArtifact@1
-                    displayName: Publish Artifact - Test Files
-                    inputs:
-                      targetPath: $(Build.ArtifactStagingDirectory)/test-files
-                      artifactName: test-files
-                      publishLocation: pipeline
+                  # At this point we want to publish the artifact with npm-packed packages, and the one with test files,
+                  # but as part of 1ES migration that's now part of templateContext.outputs below.
 
               # Collect/publish/run bundle analysis
               - ${{ if eq(parameters.taskBundleAnalysis, true) }}:
@@ -422,13 +403,8 @@ extends:
                       workingDir: '${{ parameters.buildDirectory }}'
                       customCommand: 'run bundle-analysis:collect'
 
-                  - task: 1ES.PublishPipelineArtifact@1
-                    displayName: Publish Artifacts - bundle-analysis
-                    condition: and( succeeded(), ne(variables['Build.Reason'], 'PullRequest'), eq(${{ parameters.taskPublishBundleSizeArtifacts }}, true) )
-                    inputs:
-                      targetPath: ${{ parameters.buildDirectory }}/artifacts/bundleAnalysis
-                      artifactname: bundleAnalysis
-                      publishLocation: Container
+                  # At this point we want to publish the artifact with the bundle size analysis,
+                  # but as part of 1ES migration that's now part of templateContext.outputs below.
 
                   - task: Npm@1
                     displayName: run bundle size comparison
@@ -480,13 +456,8 @@ extends:
                       workingDir: '${{ parameters.buildDirectory }}'
                       customCommand: 'run ci:build:docs'
 
-              - ${{ if or(eq(parameters.publishDocs, true), eq(parameters.taskBuildDocs, true)) }}:
-                - task: 1ES.PublishPipelineArtifact@1
-                  displayName: Publish Artifact - _api-extractor-temp
-                  inputs:
-                    targetPath: '${{ parameters.buildDirectory }}/_api-extractor-temp'
-                    artifactName: _api-extractor-temp
-                    publishLocation: pipeline
+              # At this point we want to publish the artifact with the _api-extractor-temp folder,
+              # but as part of 1ES migration that's now part of templateContext.outputs below.
 
               - ${{ if eq(parameters.packageManager, 'pnpm') }}:
                 # Reset the pnpm-lock.yaml file since it's been modified by the versioning. But for dependency caching we want
@@ -525,6 +496,46 @@ extends:
               # This additional build step is used to run step not part of the main build. In build client pipeline,
               # this is used to inject telemetry key file and upload built devtools extension.
               - ${{ parameters.additionalBuildSteps }}
+
+            templateContext:
+              outputs:
+                - ${{ if and(ne(convertToJson(parameters.taskTest), '[]'), contains(convertToJson(parameters.taskTest), 'tinylicious')) }}:
+                    - output: pipelineArtifact
+                      displayName: Publish Artifact - Tinylicious Log
+                      condition: and(succeededOrFailed(), eq(variables['startTest'], 'true'))
+                      targetPath: '${{ parameters.buildDirectory }}/packages/test/test-end-to-end-tests/tinylicious.log'
+                      artifactName: tinyliciousLog_attempt-$(System.JobAttempt)
+                      sbomEnabled: false
+                      publishLocation: pipeline
+                      continueOnError: true # Keep running subsequent tasks even if this one fails (e.g. the tinylicious log wasn't there)
+
+                - ${{ if ne(parameters.taskPack, false) }}:
+                    - output: pipelineArtifact
+                      displayName: Publish Artifact - pack
+                      targetPath: $(Build.ArtifactStagingDirectory)/pack
+                      artifactName: pack
+                      publishLocation: pipeline
+
+                    - output: pipelineArtifact
+                      displayName: Publish Artifact - Test Files
+                      targetPath: $(Build.ArtifactStagingDirectory)/test-files
+                      artifactName: test-files
+                      publishLocation: pipeline
+
+                - ${{ if eq(parameters.taskBundleAnalysis, true) }}:
+                    - output: pipelineArtifact
+                      displayName: Publish Artifacts - bundle-analysis
+                      condition: and( succeeded(), ne(variables['Build.Reason'], 'PullRequest'), eq(${{ parameters.taskPublishBundleSizeArtifacts }}, true) )
+                      targetPath: ${{ parameters.buildDirectory }}/artifacts/bundleAnalysis
+                      artifactname: bundleAnalysis
+                      publishLocation: Container
+
+                - ${{ if or(eq(parameters.publishDocs, true), eq(parameters.taskBuildDocs, true)) }}:
+                    - output: pipelineArtifact
+                      displayName: Publish Artifact - _api-extractor-temp
+                      targetPath: '${{ parameters.buildDirectory }}/_api-extractor-temp'
+                      artifactName: _api-extractor-temp
+                      publishLocation: pipeline
 
           # Job - Component detection
           - ${{ if eq(variables.componentDetection, true) }}:
