--- a/tools/pipelines/templates/1ES/build-docker-service.yml
+++ b/tools/pipelines/templates/1ES/build-docker-service.yml
@@ -130,6 +130,7 @@ extends:
       displayName: Build Stage
       dependsOn: [] # this stage doesn't depend on preceding stage
       variables:
+        - group: container-registry-info
         - ${{ if eq(parameters.testBuild, true) }}:
           - name: buildContainerName
             value: test/${{ parameters.containerName }}
