--- a/tools/pipelines/server-historian.yml
+++ b/tools/pipelines/server-historian.yml
@@ -97,7 +97,9 @@ extends:
   template: /tools/pipelines/templates/1ES/build-docker-service.yml@self
   parameters:
     testBuild: ${{ variables.testBuild }}
-    pushImage: ${{ variables.pushImage }}
+    shouldPushDockerImage: ${{ variables.pushImage }}
+    shouldReleaseDockerImage: ${{ variables.releaseImage }}
+    shouldPublishNpmPackages: ${{ variables.publish }}
     releaseKind: ${{ parameters.releaseKind }}
     buildToolsVersionToInstall: ${{ parameters.buildToolsVersionToInstall }}
     buildDirectory: server/historian
