Fix use of variables for compile-time conditional expressions.
componentDetection is just given the same value as publish, so no need to pass a separate parameter.

--- a/tools/pipelines/build-client.yml
+++ b/tools/pipelines/build-client.yml
@@ -123,6 +123,8 @@ variables:
 extends:
   template: /tools/pipelines/templates/1ES/build-npm-package.yml@self
   parameters:
+    canRelease: ${{ variables.canRelease }}
+    publish: ${{ variables.publish }}
     publishOverride: ${{ parameters.publishOverride }}
     releaseBuildOverride: ${{ parameters.releaseBuildOverride }}
     packageTypesOverride: ${{ parameters.packageTypesOverride }}
